common-applications/control/om-grafana-ingress/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: om-grafana-internal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 31920
---
kind: Endpoints
apiVersion: v1
metadata:
  name: om-grafana-internal
subsets:
  - addresses:
      # These machines below are cluster workers in om cluster.
      - ip: 10.0.1.22
      - ip: 10.0.1.41
    ports:
      - port: 31920
