common-applications/control/om-grafana-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: om-test-ingress
spec:
  tls:
    - hosts:
        - om-test.osinfra.cn
      secretName: grafana-tls
  rules:
    - host: om-test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-grafana-internal
              servicePort: 80
            path: /
